[package]
name = "passeri"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/misteriaud/passeri"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
clap = { version = "4.4.6", features = ["derive"] }
midir = "0.9.1"
oneshot = "0.1.6"
rand = "0.8.5"
thiserror = "1.0.49"
