[package]
name = "passeri-bluetooth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
passeri-core = { path = "../passeri-core" }
btleplug = "0.11.1"
tokio = { version = "1", features = ["full"] }
uuid = "1.5.0"
futures-util = "0.3.28"

log = "0.4.20"
oneshot = "0.1.6"
thiserror = "1.0.49"
midir = "0.9.1"
