[package]
name = "passeri-core"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/misteriaud/passeri"
authors = ["Maxime Riaud"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# clap = { version = "4.4.6", features = ["derive"] }
log = "0.4.20"
midir = "0.9.1"
oneshot = "0.1.6"
thiserror = "1.0.49"
